json_parser/src/snapshots/json_parser__parser__tests__parse_test_data@pass__pass12.json.snap
---
source: json_parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/pass/pass12.json
snapshot_kind: text
---
Err(
    ExpectedTokenError {
        expected: [
            LBrace,
            LBracket,
        ],
        actual: Illegal,
        origin: "",
        row: 1,
        column: 11,
    },
)
